# stm_emulator

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  emulatorStart  emulatorStart.py  pyproject.toml
utils/: Commands.py  Protocol.py  SerialUtils.py  __init__.py
