[tool.poetry]
name = "ts-comemulator"
version = "0.1.1"
description = ""
authors = ["blues-alex <ya.blues@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.3"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
